fix index to show right amount of covers

--- a/www/src/less/app.less
+++ b/www/src/less/app.less
@@ -1,10 +1,8 @@
 @import '_reset.less';
 
-body {
-  overflow: hidden;
-}
-
 .books {
+  position: relative;
+  overflow: hidden;
   text-align: center;
   ul {
     width: 100%;
